# lativ-nextjs-fastapi

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend-guest/: Cargo.toml  bacon.toml
backend-guest/scripts/: runDev.bat
backend-guest/scripts/prod/: backend-guest.service  run.sh
backend-guest/src/: main.rs
backend-guest/src/middleware/: mod.rs  timer.rs
backend-guest/src/router/: v1.rs
backend/alembic/versions/: 2840e6973550_product_imgurl.py  4e0317c7f0b4_init.py  6d07539ac00f_sp_img_file_name.py  a52a81f5d85a_init.py  be4c56e5d1df_order.py  dd92a850f360_size_sp_optional.py
backend/deploy/: backend.service  monitor.py  monitor.service
backend/jinja2/: generate_routers.py
backend/scripts/dev/: autoMigrate.bat  run.bat
backend/scripts/prod/: backend.service  monitor.py  monitor.service  onlyRunMonitor.bat  run.sh
backend/src/: constant.py  db.py  lifespan.py  log.py  main.py  setting.py
backend/src/errorHandler/: _global.py
backend/src/middleware/: _global.py  security.py  setup.py
backend/src/models/: base.py  category.py  color.py  gender.py  nav.py  product.py  series.py  size.py  sizeSubproduct.py  subCategory.py  subProduct.py
backend/src/router/: root.py
backend/src/router/v1/: category.py  color.py  gender.py  nav.py  product.py  product_card.py  root.py  series.py  size.py  sub_category.py  sub_product.py
backend/src/schema/: nav.py  product_card.py
backend/src/service/: cloudinary.py  common.py  crud.py  img.py  nav.py  product.py  product_card.py  series.py  switch_order.py
backend/src/utils/: env.py
(+238 files in other folders)
