[package]
name = "backend-guest"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = [ "runtime-async-std", "tls-native-tls","postgres","macros" ] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
actix-cors = "0.7.1"
log = "0.4.28"
env_logger = "0.11.8"
futures-util = "0.3.31"
